Bug 279862 - When packing a single folder - its name is not included in the archive name
Summary: When packing a single folder - its name is not included in the archive name
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2011-08-11 06:04 UTC by Victor Varvaryuk
Modified: 2011-08-11 12:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments
Empty suggested archive name - only the extension (74.86 KB, image/png)
2011-08-11 06:04 UTC, Victor Varvaryuk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2011-08-11 06:04:17 UTC
Created attachment 62742 [details]
Empty suggested archive name - only the extension

Version:           2.16 (using KDE 4.7.0) 
OS:                Linux

Version 2.17
When i select a folder to compress [Context Menu -> Compress ->
Compress to...] Ark opens a dialog suggesting the name of the archive -
only the extension, while it should be the name of the folder.


Reproducible: Always

Steps to Reproduce:
If i select a folder named 'Test' to pack and call [Context Menu -> Compress ->
Compress to...] Ark opens a dialog suggesting the name of the archive equal '.7z'.


Expected Results:  
If i select a folder to pack and call [Context Menu -> Compress ->
Compress to...] Ark should open a dialog suggesting the name of the archive equal to the name of the folder.
Comment 1 Raphael Kubo da Costa 2011-08-11 12:22:16 UTC
SVN commit 1246402 by rkcosta:

Account for the case when the only selected file is a directory.

So far we were only calling QFileInfo::baseName(), which returned an
empty string for directories.

BUG: 279862
FIXED-IN: 4.7.1

 M  +5 -2      adddialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1246402
Comment 2 Raphael Kubo da Costa 2011-08-11 12:23:18 UTC
SVN commit 1246403 by rkcosta:

Account for the case when the only selected file is a directory.

So far we were only calling QFileInfo::baseName(), which returned an
empty string for directories.

Forwardport of r1246402.

CCBUG: 279862

 M  +5 -2      adddialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1246403