Account for the case when the only selected file is a directory.

So far we were only calling QFileInfo::baseName(), which returned an
empty string for directories.

BUG: 279862
FIXED-IN: 4.7.1

svn path=/branches/KDE/4.7/kdeutils/ark/; revision=1246402